@@ -507,7 +507,7 @@ Set RF2 or LMU Rest API host address. Default is `localhost`.
 Set port for host address. The port value for RF2 is `5397`, and `6397` for LMU.
 
     connection_timeout
-Set connection timeout duration in seconds. Default is `1` second.
+Set connection timeout duration in seconds. Value range in `0.1` to `10`. Default is `1` second.
 
     connection_retry
 Set number of attempts to retry connection. Value range in `0` to `10`. Default is `3` retries.
