@@ -24,6 +24,7 @@ from PySide2.QtCore import Qt, Slot, QRectF
 from PySide2.QtGui import QPainter, QPixmap, QPen, QBrush
 
 from ..api_control import api
+from ..module_info import minfo
 from ._base import Overlay
 
 WIDGET_NAME = "steering"
@@ -110,6 +111,8 @@ class Draw(Overlay):
                 self.sw_rot_range = self.wcfg["manual_steering_range"]
             else:
                 self.sw_rot_range = api.read.input.steering_range_physical()
+                if minfo.setup.steeringWheelRange > 0 >= self.sw_rot_range:
+                    self.sw_rot_range = minfo.setup.steeringWheelRange
 
             # Recalculate scale mark
             if self.wcfg["show_scale_mark"] and self.sw_rot_range != self.last_sw_rot_range:
